实现拼接功能，优化拼接速度

--- a/docs/软件内部接口开发文档.md
+++ b/docs/软件内部接口开发文档.md
@@ -31,5 +31,56 @@ json键值按照如下规范进行装填：
         return json.dumps(sorted_data)
 ```
 
+## 标定结果规范
+标定结果为 `json` 格式，其包含：
+- `rc`                   : int类型，当前标定板黑白格总行数
+- `cc`                   : int类型，当前标定板黑白格总列数
+- `px_size`              : int类型，二维码像素块大小，单位pixel
+- `qr_border`            : int类型，二维码border的像素块数量，单位为 `px_size`
+- `matched_points`       : Obj类型，子键值 `${image_tag}` 为标定板标定时的图像tag(标定时传入的子图像文件名)
+  - `${image_tag}`       : List类型，子元素为包含
+    - `${MatchedPoints}` : Obj类型，为匹配到的坐标点对；子键值 `cb_point` 为标定板图像坐标点，子键值 `img_point` 为子图像中坐标点
+      - `cb_point`       : List类型，为坐标点坐标，顺序为 [x, y]
+      - `img_point`      : List类型，为坐标点坐标，顺序为 [x, y]
 
-
+标定结果示例：
+```json
+{
+  "matched_points": {
+    "Image-0021.png": [
+      // 标定时传入的子图像图像名
+      {
+        "cb_point": [
+          16800,
+          11340
+        ],
+        "img_point": [
+          732.7178955078125,
+          850.0081787109375
+        ]
+      },
+      {
+        "cb_point": [
+          17130,
+          11340
+        ],
+        "img_point": [
+          0.3239157497882843,
+          842.8349609375
+        ]
+      }
+      // 其他匹配到的标定点...
+    ],
+    "Image-0022.png": [
+      // ...
+    ],
+    // 其他子图像
+  }, 
+  "rc": 30,
+  "cc": 44,
+  "px_size": 10,
+  "qr_border": 3,
+  "base_width": 17160,
+  "base_height": 11700
+}
+```
